# concurrent_framework

./: .cproject  .gitignore  .project  Algo.h  AlgoGraph.cpp  AlgoGraph.h  AlgoPool.cpp  AlgoPool.h  BitMapSchedule.h  CMakeLists.txt  ConcurrentTypes.h  Context.cpp  Context.h  DataTypes.h  DirtyTBBAdditions.h  EventGraph.h  EventLoopManager.cpp  EventLoopManager.h  ExampleChains.h  Helpers.h  LHCbGraph.h  README  README.md  Scheduler.cpp  Scheduler.h  Sequence.h  SequenceManager.h  Skep.cpp  Skep.h  TaskSchedule.cpp  TaskSchedule.h  UserSequenceExample1.cpp  UserSequenceExample1.h  Whiteboard.cpp  Whiteboard.h  bitmap_example.cpp  dependency_graph.cpp  taskbits_example.cpp  taskgraph_example.cpp  thisCF4Hep.csh
bkp/: ChainAlgosGraph.cpp.txt  ChainAlgosGraph.h.txt  Observer.cpp.txt  Observer.h.txt  dependency_graph.cpp.workingBkp
cmake/: thisCF4Hep.csh
